--- a/ble_uart_rx_multi/TODO.txt
+++ b/ble_uart_rx_multi/TODO.txt
@@ -1,13 +1,16 @@
 1. Implement commands / status messages as follows:
 Commands (ends with \r or \n):
-  '#Cn addr'   - connect n-th stream to addr
-  '#R'         - reset to idle state
+  '#Cn addr'  - connect n-th stream to addr
+  '#R'        - reset to idle state
 Optionally, commands may begin with an 8-bit checksum, expressed in hexadecimal,
 starting with the prefix ~. So the command starts with ~hh#
 Status messages:
-  ':D0'        - not connected
-  ':Cn'        - connecting to the n-th peer
-  ':Dbitmask'  - data receiving from connected peers, bitmask has bits set for peers currently connected
+  ':I'   - idle, not connected
+  ':Cn'  - connecting to the n-th peer
+  ':D'   - data receiving from connected peers
 
 2. Start every out message with \1 end with \0. Second symbol is ':' for status messages
   or '0', '1' .., 'A', 'B', ..  for data stream 0, 1, .. (max 32)
+
+3. The first data message after connection / re-connection has no data payload.
+   This is the stream start token.
