--- a/ble_uart_rx_multi/TODO.txt
+++ b/ble_uart_rx_multi/TODO.txt
@@ -5,9 +5,10 @@ Commands (ends with \r or \n):
 Optionally, commands may begin with an 8-bit checksum, expressed in hexadecimal,
 starting with the prefix ~. So the command starts with ~hh#
 Status messages:
-  ':I'   - idle, not connected
-  ':Cn'  - connecting to the n-th peer
-  ':D'   - data receiving from connected peers
+  ':I'      - idle, not connected
+  ':Cn'     - connecting to the n-th peer
+  ':D'      - data receiving from connected peers
+  ':Sn rssi - RSSI report for n-th peer
 
 2. Start every out message with \1 end with \0. Second symbol is ':' for status messages
   or '0', '1' .., 'A', 'B', ..  for data stream 0, 1, .. (up to 31)
